--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NightShift AI – 24/7 Hotel Front Desk Automation</title>
     <link rel="stylesheet" href="/style.css">
@@ -12,9 +13,9 @@
     <nav>
         <h1 class="logo">NightShift <span>AI</span></h1>
         <ul>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/pricing.html">Pricing</a></li>
+            <li><a href="/faq.html">FAQ</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -22,7 +23,7 @@
 <section class="hero">
     <h2>24/7 Front Desk AI for Small Hotels & Motels</h2>
     <p>Answer calls, book rooms, take payments, handle emergencies, and notify the GM — all automated.</p>
-    <a href="contact.html" class="cta">Get Started</a>
+    <a href="/contact.html" class="cta">Get Started</a>
 </section>
 
 <section class="features">
