--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -25,8 +25,8 @@
 
     .container {
         max-width: 1200px;
-        margin: 25px auto;
-        padding: 20px;
+        margin: auto;
+        padding: 25px;
     }
 
     h2 {
@@ -117,50 +117,36 @@
 
 </div>
 
-
 <script>
-// =====================================================================================
-// SUPABASE CONFIG
-// =====================================================================================
-const SUPABASE_URL = "https://sbzdnzouoyxmawuhdvdi.supabase.co";
-const SUPABASE_ANON_KEY =
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNiemRuem91b3l4bWF3dWhkdmRpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyMDY3ODgsImV4cCI6MjA4MDc4Mjc4OH0.SV4XppZoez27_g69NsjZNeJ989bhrEAAvR_XoD5w2Ho";
+// -------------------------------------------------------
+// FIXED: Proper Supabase Client
+// -------------------------------------------------------
+const client = supabase.createClient(
+    "https://sbzdnzouoyxmawuhdvdi.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNiemRuem91b3l4bWF3dWhkdmRpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyMDY3ODgsImV4cCI6MjA4MDc4Mjc4OH0.SV4XppZoez27_g69NsjZNeJ989bhrEAAvR_XoD5w2Ho"
+);
 
-const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-
-// =====================================================================================
-// SAFE: LOAD DATA ONLY AFTER PAGE COMPLETELY LOADS
-// (Prevents Vercel Crawler From Triggering Supabase Calls)
-// =====================================================================================
-document.addEventListener("DOMContentLoaded", () => {
-    loadReservations();
-    loadCallMetadata();
-});
-
-
-// =====================================================================================
-// LOAD RESERVATIONS
-// =====================================================================================
+// -------------------------------------------------------
+// LOAD Reservations
+// -------------------------------------------------------
 async function loadReservations() {
-    const { data, error } = await supabase
+    const { data, error } = await client
         .from("reservations")
         .select("*")
         .order("created_at", { ascending: false });
 
-    const loadingEl = document.getElementById("res-loading");
-    const tableEl = document.getElementById("reservations-table");
-    const bodyEl = document.getElementById("reservations-body");
-
     if (error) {
         console.error("Reservations error:", error);
-        loadingEl.innerText = "Failed to load reservations.";
+        document.getElementById("res-loading").innerText =
+            "Failed to load reservations.";
         return;
     }
 
-    loadingEl.style.display = "none";
-    tableEl.style.display = "table";
-    bodyEl.innerHTML = "";
+    document.getElementById("res-loading").style.display = "none";
+    document.getElementById("reservations-table").style.display = "table";
+
+    const tbody = document.getElementById("reservations-body");
+    tbody.innerHTML = "";
 
     data.forEach(row => {
         const tr = document.createElement("tr");
@@ -174,33 +160,31 @@ async function loadReservations() {
             <td>$${row.total_due?.toFixed(2) || "0.00"}</td>
             <td>${row.notes || "-"}</td>
         `;
-        bodyEl.appendChild(tr);
+        tbody.appendChild(tr);
     });
 }
 
-
-// =====================================================================================
-// LOAD CALL METADATA
-// =====================================================================================
+// -------------------------------------------------------
+// LOAD Call Metadata
+// -------------------------------------------------------
 async function loadCallMetadata() {
-    const { data, error } = await supabase
+    const { data, error } = await client
         .from("call_metadata")
         .select("*")
         .order("created_at", { ascending: false });
 
-    const loadingEl = document.getElementById("meta-loading");
-    const tableEl = document.getElementById("metadata-table");
-    const bodyEl = document.getElementById("metadata-body");
-
     if (error) {
         console.error("Metadata error:", error);
-        loadingEl.innerText = "Failed to load call data.";
+        document.getElementById("meta-loading").innerText =
+            "Failed to load call data.";
         return;
     }
 
-    loadingEl.style.display = "none";
-    tableEl.style.display = "table";
-    bodyEl.innerHTML = "";
+    document.getElementById("meta-loading").style.display = "none";
+    document.getElementById("metadata-table").style.display = "table";
+
+    const tbody = document.getElementById("metadata-body");
+    tbody.innerHTML = "";
 
     data.forEach(row => {
         const tr = document.createElement("tr");
@@ -213,9 +197,13 @@ async function loadCallMetadata() {
             <td>${row.tags || "-"}</td>
             <td>${row.outcome || "-"}</td>
         `;
-        bodyEl.appendChild(tr);
+        tbody.appendChild(tr);
     });
 }
+
+// Run on page load
+loadReservations();
+loadCallMetadata();
 </script>
 
 </body>
