--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -1,3 +1,4 @@
+<h1 style="color:red; font-size:40px;">TEST HEADER — IF YOU SEE THIS, FILE IS LOADING</h1>
 <!DOCTYPE html>
 <html lang="en">
 <head>
