--- a/index.html
+++ b/index.html
@@ -1,65 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>NightShift AI – 24/7 Hotel Front Desk Automation</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NightShift AI – 24/7 Hotel Voice Assistant</title>
 
-    <!-- Correct root path for Vercel -->
-    <link rel="stylesheet" href="/style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- SEO -->
+    <meta name="description" content="NightShift AI is a 24/7 voice assistant for hotels, answering calls instantly, booking rooms, and boosting revenue while reducing labor costs.">
 </head>
+
 <body>
 
-<header>
-    <nav>
-        <h1 class="logo">NightShift <span>AI</span></h1>
-        <ul>
-            <li><a href="/pricing.html">Pricing</a></li>
-            <li><a href="/faq.html">FAQ</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <!-- Header / Navigation -->
+    <header>
+        <nav class="navbar">
+            <h1 class="logo">NightShift <span>AI</span></h1>
 
-<section class="hero">
-    <h2>24/7 Front Desk AI for Small Hotels & Motels</h2>
-    <p>
-        Answer calls, book rooms, take payments, handle emergencies, and notify the GM —
-        all automated with enterprise-level reliability.
-    </p>
-    <a href="/contact.html" class="cta">Get Started</a>
-</section>
+            <ul class="nav-links">
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<section class="features">
-    <h2>Why Hotels Choose NightShift AI</h2>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h2>24/7 AI Front Desk for Independent Hotels</h2>
+            <p>
+                NightShift instantly answers calls, books rooms, handles pet/smoking questions,
+                sends booking confirmations to management, and covers your front desk even when staff is unavailable.
+            </p>
+            <a href="pricing.html" class="cta-button">See Pricing</a>
+        </div>
+    </section>
 
-    <div class="feature-grid">
-        <div class="feature-card">
-            <h3>Instant Call Answering</h3>
-            <p>Your AI receptionist answers every call in under 3 seconds, any time of day.</p>
-        </div>
+    <!-- Feature Highlights -->
+    <section class="features">
+        <h2>Why Hotels Choose NightShift</h2>
 
-        <div class="feature-card">
-            <h3>Real-Time Booking</h3>
-            <p>Guests can book rooms, request late checkout, and check availability instantly.</p>
-        </div>
+        <div class="features-grid">
 
-        <div class="feature-card">
-            <h3>Emergency Response</h3>
-            <p>“Call 911” protocol, safety handling, and GM alerts built directly into the AI.</p>
-        </div>
+            <div class="feature">
+                <h3>📞 Answers Every Call</h3>
+                <p>Never miss a reservation opportunity — NightShift answers in under 3 seconds, 24/7.</p>
+            </div>
 
-        <div class="feature-card">
-            <h3>Custom Hotel Knowledge</h3>
-            <p>Trained specifically on your policies — pricing, deposits, pet rules, and more.</p>
-        </div>
-    </div>
-</section>
+            <div class="feature">
+                <h3>🏨 Books Rooms Automatically</h3>
+                <p>
+                    Handles all booking details: dates, nights, pets, smoking preference,
+                    and sends confirmations to management.
+                </p>
+            </div>
 
-<footer>
-    <p>© 2025 NightShift AI. All rights reserved.</p>
-</footer>
+            <div class="feature">
+                <h3>💵 Boost Revenue</h3>
+                <p>
+                    Hotels typically see 10–20% more bookings due to zero missed calls and instant availability checks.
+                </p>
+            </div>
+
+            <div class="feature">
+                <h3>👨‍✈️ Manager Notifications</h3>
+                <p>Each reservation sends an automatic SMS/email summary to your team.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Use Cases -->
+    <section class="use-cases">
+        <h2>Perfect For</h2>
+
+        <div class="use-grid">
+            <div class="use-item">
+                <h3>🏨 20–120 Room Independent Hotels</h3>
+                <p>Ideal for limited-service properties where staffing is inconsistent.</p>
+            </div>
+
+            <div class="use-item">
+                <h3>🌙 Night Shift Coverage</h3>
+                <p>AI handles calls while your night auditor focuses on operations.</p>
+            </div>
+
+            <div class="use-item">
+                <h3>📉 Labor Shortages</h3>
+                <p>Eliminate missed calls when the front desk steps away or is short-staffed.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 NightShift AI. All rights reserved.</p>
+        <p><a href="contact.html">Contact Us</a></p>
+    </footer>
 
 </body>
 </html>
